# GSoC2014_OpenCV

./: .gitignore  readme.md
sources/: opencv_size.h
sources/algorithms/: CMakeLists.txt
sources/algorithms/structuredEdgeDetection/: structuredEdgeDetection.cpp  structuredEdgeDetection.h
sources/cmake/: FindMATLAB.cmake  utils.cmake
sources/matlab/: CMakeLists.txt  getFChannels.cpp  predictEdges.cpp  structuredEdgeDetection.cpp  structuredEdgeDetection.m
